Release1 (#757)
* Updated made on call a required field. (#755)

* Confirm attendance list is taking into account confirmed but returned trial attendances. This should only show the unconfirmed count. (#753)

* Added restrictions to confirm attendance so prevent attendances from being confirmed multiple times.

* Fixed tests

* History stating jury attendance confirmed when return but do not confirm was selected (#752)

* Fixed issue where jury attendance history would get created if you returned the panel but did not confirm attendance

* Fixed tests

* Added additional scheduler metrics (#575)

* Added additional scheduler metrics

* Added additional scheduler metrics

* Added null or blank check when checking if an email / phone number exists

* Minor tidy up

* Fixed compile issue

* Added validating in for invalid phone numbers or email addresses

* Applied review comments

* hotfix/JM-8102 fix for missing days (#756)

* hotfix/JM-8102 fix for missing days

* updated flyway migration name to avoid conflict

* hotfix/JM-7928 update to utilisation report query (#758)

* Updated electronic police check report header (#759)

* Update V2_30__util_report_update.sql

* Update V2_31__util_report_update.sql

* renaming flyway migration to avoid sequence error on deployments

* Feature/JM-8190 (#765)

* task/JM-8193 (#763)

* Task/JM-8191 Manually create a juror record (#764)

* task/JM-8191

* task/JM-8191

* updates for test fix and styles

* adding unit test

* updated tests

* Update JurorRecordServiceTest.java

* Update JurorRecordControllerITest.java

* JM-8196 Amend PNC View (#767)

* Feature/jm 8181 (#768)

* JM-8196 Amend PNC View

* JM-8196 Amend PNC View

* JM-8196 Amend PNC View

* JM-8196 Amend PNC View remove spaces last_name

* remove duplicate migration file

* Task/JM-8188 Pre-mod userids preventing access to digital response records (#769)

* task/JM-8188 Unable to view mi